Updating favicon to menehune (#31)

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4DA5F4" />
     <title>Privacy Policy for Hackathon Starter</title>
-    <link rel="shortcut icon" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
